# vault-sync

./: .gitattributes  .gitignore  BURN_REPORT.md  OWNER-ACK.md  README.md  install.sh  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: SYNC_CONTRACT.md  icarus-config.toml.example  icarus-vault-sync-runbook.md
docs/incidents/: 2026-07-18-conflict-storm-root-cause-v0432.md
docs/plans/: 2026-06-09-reconcile-server-wins-shadow-convergence.md
docs/whetstone-s511/: e2e-verification-recorder.md  society-diagnosis-design-critique-raw.json
ready-to-run/: README.md  com.lattice.nexus-vault-sync.plist  link-install-start.sh  parity_probe.md  quarantine_conflicts.py  trinity-install-start.sh
scripts/: promote-nexus.sh  upload-to-nexus.sh  verify-nexus-release.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_client.rs  base_seq_store.rs  canonical_form.rs  commands.rs  commands_vaults.rs  config.rs  conflict_stash.rs  echo_guard.rs  file_watcher.rs  integrity_check.rs  keyring.rs  lib.rs  main.rs  materializer.rs  obsidian_install_detect.rs  obsidian_plugin_detect.rs  pairing.rs  pull_backfill.rs  push_client.rs  push_journal.rs  push_rate_limit.rs  rasp_fence.rs  reconciliation.rs  redflag.rs  retry_ledger.rs  scope.rs  sse.rs  sync_health.rs  sync_shadow.rs  token_store.rs  tray.rs  tray_state.rs  verify_repair.rs
src-tauri/tests/: test_alignment_pull.rs  test_api_client.rs  test_b1_alternation.rs  test_config.rs  test_keyring.rs  test_materializer_write.rs  test_pairing.rs  test_r3_vault_name_synthesis.rs  test_r8_conflict_visibility.rs  test_scope.rs  test_sse.rs
src-tauri/tests/vectors/: canonical_form_c_vectors.json
