[package]
name = "vault-sync-daemon"
version = "0.4.34"
edition = "2021"

[lib]
name = "vault_sync_daemon"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
eventsource-client = "0.13"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
yaml-rust2 = "0.10"
notify = "7"
notify-debouncer-full = "0.4"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
futures = "0.3"
# T17 needs these too (plan added them as a "and-also" at the end of T17;
# bundling here so cargo check passes after a single edit)
dirs = "5"
toml = "0.8"
serde_yaml = "0.9"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
base64 = "0.22"
walkdir = "2"
# D8 (S511, TKT-2dc9a17e): NFC canonicalization of all sync path boundaries
# (shadow key, reconcile manifest, push wire path). macOS persists filenames
# NFD; ext4/NTFS store bytes verbatim, so a non-ASCII filename desyncs the
# shadow lookup across hosts, producing a shadow miss, a Pull, and a silent
# revert. unicode-normalization gives us the NFC pass.
unicode-normalization = "0.1"
# D8/D12 (S511): dunce promoted from transitive to DIRECT so the Windows write
# path can prefix \\?\ on the daemon's own materialize/stash targets (long-path
# / CreateFileW on a host without LongPathsEnabled). No-op canonicalization on
# non-Windows platforms, so it is safe to call unconditionally.
dunce = "1"

[dev-dependencies]
mockito = "1"
rstest = "0.23"
# opfix-vaultsync-dormancy: sync_health watchdog tests use
# `tokio::time::advance` + `start_paused = true` to exercise the periodic
# tick deterministically without real-time sleeps. Cargo unifies features
# across normal+dev so this lights up `test-util` for the test build only.
tokio = { version = "1", features = ["test-util"] }
# Piece 1 (S535): property test for canonicalize() idempotency / fixpoint.
proptest = "1"

[features]
default = []
